--- a/css/app.css
+++ b/css/app.css
@@ -9,6 +9,7 @@
 .locationmap {
 	width:100%;
 	height:500px;
+	padding:50px;
 }
 
 .border {
@@ -20,11 +21,25 @@
 	float: right;
 }
 
-#map {
-	margin-top:20px;
-}
 
 .informationdetailed {
-	margin-top: 20px;
 	text-align: left;
+}
+
+.navbar-right li a {
+	letter-spacing: 1px;
+}
+
+.navbar-brand {
+	letter-spacing: 2px;
+}
+
+.footer {
+	width:100%;
+	height:100px;
+	border:2px solid gray;
+}
+
+.opacity {
+	opacity: .1;
 }
