--- a/css/app.css
+++ b/css/app.css
@@ -21,7 +21,6 @@
 	float: right;
 }
 
-
 .informationdetailed {
 	text-align: left;
 }
@@ -35,9 +34,10 @@
 }
 
 .footer {
+	margin-top:30px;
 	width:100%;
 	height:100px;
-	border:2px solid gray;
+	background-color:gray;
 }
 
 .opacity {
