--- a/css/app.css
+++ b/css/app.css
@@ -5,11 +5,17 @@
 	margin:0!important;
 }
 
-
-.locationmap {
+#locationmap {
 	width:100%;
 	height:500px;
 	padding:50px;
+}
+
+.textbox {
+	width:100%;
+	height:300px;
+	padding:20px;
+	text-align: center;
 }
 
 .border {
@@ -23,6 +29,9 @@
 
 .informationdetailed {
 	text-align: left;
+	padding:20px;
+	width:100%;
+	height:300px;
 }
 
 .navbar-right li a {
@@ -42,4 +51,9 @@
 
 .opacity {
 	opacity: .1;
+}
+
+.about {
+	text-align: center;
+	padding:10px;
 }
