--- a/css/app.css
+++ b/css/app.css
@@ -11,6 +11,12 @@
 	padding:50px;
 }
 
+.footer p {
+	text-align: center;
+	color:white;
+	letter-spacing: 2px;
+}
+
 .textbox {
 	width:100%;
 	height:300px;
@@ -32,6 +38,7 @@
 	padding:20px;
 	width:100%;
 	height:300px;
+	border:1px solid blue;
 }
 
 .navbar-right li a {
